# ApexFinance

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
finance/: admin.py  filters.py  models.py  urls.py  views.py
finance/management/commands/: generate_transactions.py
finance/migrations/: 0001_initial.py  0002_category_transaction.py
finance/templates/finance/: base.html  index.html  transactions_list.html
finance/templates/finance/partials/: navbar.html  transactions_container.html
templates/account/: login.html  logout.html  signup.html
