[tool.poetry]
name = "apexfinance"
version = "0.1.0"
description = ""
authors = ["Milad <milad.hz75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
django-widget-tweaks = "^1.5.0"
django-allauth = {extras = ["socialaccount"], version = "^0.63.6"}
urllib3 = "^2.2.2"
tomli = "^2.0.1"
sqlparse = "^0.5.1"
six = "^1.16.0"
requests-oauthlib = "^2.0.0"
requests = "^2.32.3"
python3-openid = "^3.2.0"
python-dateutil = "^2.9.0.post0"
pyjwt = "^2.8.0"
pycparser = "^2.22"
platformdirs = "^4.2.2"
pathspec = "^0.12.1"
packaging = "^24.1"
oauthlib = "^3.2.2"
mypy-extensions = "^1.0.0"
idna = "^3.7"
faker = "^26.0.0"
django-filter = "^24.2"
defusedxml = "^0.7.1"
cryptography = "^42.0.8"
colorama = "^0.4.6"
click = "^8.1.7"
charset-normalizer = "^3.3.2"
cffi = "^1.16.0"
certifi = "^2024.7.4"
black = "^24.4.2"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
